--- a/generator/mekfont-generator.cabal
+++ b/generator/mekfont-generator.cabal
@@ -4,5 +4,5 @@ build-type: Simple
 cabal-version: >= 1.10
 
 library
-  build-depends: Glob, QuickCheck, base, directory
+  build-depends: Glob, base, directory
   default-language: Haskell2010
